src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* Settings Start */

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

.gradient-primary {
    background: linear-gradient(
        90deg,
        rgba(255, 190, 52, 1) 0%,
        rgba(255, 218, 86, 1) 50%,
        rgba(255, 215, 166, 1) 100%
    );
}

h1 {
    @apply text-headingColor font-bold  text-[30px] lg:text-[50px] leading-[133.2%];
}
h2 {
    @apply text-headingColor font-semibold text-[40px] leading-[133.2%];
}
h3 {
    @apply text-headingColor font-medium text-[35px] leading-normal;
}
h4 {
    @apply text-headingColor font-medium text-[30px] leading-[129.7%];
}
h5 {
    @apply text-headingColor font-medium text-[25px] leading-[129.7%];
}
h6 {
    @apply text-headingColor font-normal text-[20px] leading-[129.7%];
}

p {
    @apply text-paragraphColor font-normal text-[16px] leading-[151.5%];
}

li {
    @apply text-paragraphColor leading-[326.5%] font-normal;
}

blockquote {
    @apply italic text-[20px] text-white;
}

.container {
    @apply max-w-[1366px] mx-auto px-[25px];
}

/* Settings End */

.banner {
    background-image: url(../assets/images/Banner.png);
    background-repeat: no-repeat;
    background-size: cover;
}

